--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-google-books",
+  "homepage": "http://Ranjini2020.github.io/mern-book-search",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,12 +11,15 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "gh-pages": "^3.1.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
