package json editing

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-google-books",
-  "homepage": "http://Ranjini2020.github.io/mern-book-search",
+  
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
@@ -15,9 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "browserslist": [
     ">0.2%",
